# cpu16_emulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ERRORS.md  LESSONS.md  Makefile  README.md  TODO.md  cmake_install.cmake
.cache/clangd/index/: cpu.cpp.660BB8543C7961C8.idx  cpu.hpp.37E643F16BE4D577.idx  cpu_test.cc.85AD22BDCB8C7170.idx  emu_utils.cpp.EF955BCAE5770042.idx  emu_utils.hpp.167DD858C5FD90A5.idx  emulator.cpp.97746FABAC663AA3.idx  emulator.hpp.A6496FD82224AEAD.idx  instruction_memory.cc.474427C72F4DC05C.idx  instruction_memory.cpp.97A3BF842686631F.idx  instruction_memory.hpp.1211920873BC580C.idx  main.cpp.E3338E16637E593D.idx  memory.cpp.1163E0DCEEDB95CD.idx  memory.hpp.9A2F78D21E272877.idx  memory_test.cc.96413FE228FE50A3.idx  my_emulator.cpp.F308E175B1C985C4.idx  oper_utils.cpp.D3CDB1A42200E994.idx  oper_utils.hpp.F8E627BE8740C851.idx  operator.cpp.43A91F3A1670C6F9.idx  operator.hpp.0F74B6D7D00AD6E9.idx  operator_table.cpp.12690D6BB6EC10BB.idx  operator_table.hpp.ADE883529EDDDBD1.idx  opers.cpp.A4401A59B4E7C912.idx  test.cc.5FD74EA0C3B2FBA2.idx
src/: CMakeLists.txt  Makefile  cmake_install.cmake  emu16.cpp  emu16.hpp  emu_operator.hpp  emu_opers.cpp  emu_utils.cpp  emu_utils.hpp  emulator.cpp  emulator.hpp  main.cpp  my_emulator.cpp
src/Compiler/: CMakeLists.txt  compiler.cpp  compiler.hpp
src/Cpu/: CMakeLists.txt  Makefile  cmake_install.cmake  cpu.cpp  cpu.hpp
src/Cpu/InstructionMemory/: CMakeLists.txt  Makefile  cmake_install.cmake  instruction_memory.cpp  instruction_memory.hpp
src/Emulator/: CMakeLists.txt  emulator.cpp  emulator.hpp
src/MachineCodeGenerator/: CMakeLists.txt  machinecodegenerator.cpp  machinecodegenerator.hpp
src/Memory/: CMakeLists.txt  memory.cpp  memory.hpp
src/OperatorTable/: CMakeLists.txt  oper_utils.cpp  oper_utils.hpp  operator.cpp  operator.hpp  operator_table.cpp  operator_table.hpp  opers.cpp
src/OperatorTable/Operator/: CMakeLists.txt  operator.hpp
src/Parser/: CMakeLists.txt  asmparser.cpp  asmparser.hpp  parsernode.cpp  parsernode.hpp
src/Parser/POperTable/: CMakeLists.txt  popertable.cpp  popertable.hpp
src/Parser/POperTable/InsCategory/: CMakeLists.txt  inscategory.cpp  inscategory.hpp
src/Tokenizer/: CMakeLists.txt  tokenizer.cpp  tokenizer.hpp
tests/: CMakeLists.txt  compiler_test.cc  cpu_test.cc  emulation_test.cc  instruction_memory.cc  memory_test.cc  operator_table_test.cc  operator_test.cc  parser.cc  parser_token_test.cc  parsernodes_test.cc  test.cc  test_asm.asm  test_three_asm.asm  test_two_asm.asm  tokenizer.cc
